[airbug/airbug#42] Splash Page - Fix favicon by using express's built in express.favicon(pathToFavicon) - forgot styles - button is visible during slide in animation. Defaulting the visibility to hidden

--- a/projects/splash/static/css/style.css
+++ b/projects/splash/static/css/style.css
@@ -731,16 +731,16 @@ a {
     height: 75px;
 }
 
-#resubmit-button-container {
-    display: block;
+#continue-sign-up-button-container {
+    display: none;
     position: absolute;
-    left: 305px;
+    left: 273px;
     top: 239px;
     z-index: 1;
     cursor: pointer;
 }
 
-#resubmit-button {
+#continue-sign-up-button {
     
 }
 
